# OptixCSP

./: .gitignore  CMakeLists.txt  README.md
build_scripts/: buildAll.sh
cmake/: OptixCSPConfig.cmake.in
demos/: CMakeLists.txt  demo_dynamic_scene.cpp  demo_large_scene.cpp  demo_parabolic_surface.cpp  demo_read_mesh.cpp  demo_read_stinput.cpp  demo_sun_modeling.cpp  demo_three_heliostats.cpp
src/: CMakeLists.txt
src/core/: Aperture.cpp  Aperture.h  CspElement.cpp  CspElement.h  Surface.h  data_manager.cpp  data_manager.h  element.cpp  element.h  geometry_manager.cpp  geometry_manager.h  pipeline_manager.cpp  pipeline_manager.h  soltrace_state.h  soltrace_system.cpp  soltrace_system.h  soltrace_type.h  sun_utils.cu  sun_utils.h  timer.h  vec3d.h  vector3d.h
src/shaders/: GeometryDataST.h  MaterialDataST.h  Soltrace.h  device_util.h  intersection.cu  materials.cu  sun.cu
src/utils/: math_util.h  util_check.hpp  util_record.hpp
